--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "nodemon src/index.js",
     "postinstall": "npm rebuild better-sqlite3"
   },
+  "engines": {
+  "node": "18.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/diogodematos/Pong-Transcender.git"
