--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "postinstall": "npm rebuild better-sqlite3 && npm install"
+    "postinstall": "npm rebuild better-sqlite3 && npm install --omit=dev"
   },
   "engines": {
   "node": "20.x"
